--- a/index.html
+++ b/index.html
@@ -2,35 +2,33 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
     <title>Animal Shelter</title>
   </head>
   <body>
-    <div>
+
         <h1>Coolest Animal Shelter Duh</h1>
-        <h2>Baby Rhino!</h2>
-        <img src="img/rhino.jpg">
-        <p>Look at this goddamned baby rhino. Wow!</p>
+        <div class="profile">
+          <h2>Baby Rhino!</h2>
+          <img src="img/rhino.jpg">
+          <p>Look at this goddamned baby rhino. Wow!</p>
     </div>
-    <div>
-        <h1>Coolest Animal Shelter Duh</h1>
+    <div class="profile">
         <h2>Bunny!</h2>
         <img src="img/bunny.jpg">
         <p>Look at this goddamned baby rhino. Wow!</p>
     </div>
-    <div>
-        <h1>Coolest Animal Shelter Duh</h1>
+    <div class="profile">
         <h2>Baby Sloth!</h2>
         <img src="img/sloth.jpg">
         <p>Look at this goddamned baby rhino. Wow!</p>
     </div>
-    <div>
-        <h1>Coolest Animal Shelter Duh</h1>
+    <div class="profile">
         <h2>Regular Iguana!</h2>
         <img src="img/iguana.jpg">
         <p>Look at this goddamned baby rhino. Wow!</p>
     </div>
-    <div>
-        <h1>Coolest Animal Shelter Duh</h1>
+    <div class="profile">
         <h2>Baby Porcupine!</h2>
         <img src="img/Porcupine.jpg">
         <p>Look at this goddamned baby rhino. Wow!</p>
