--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Animal Shelter</title>
   </head>
   <body>
-
-        <h1>Coolest Animal Shelter Duh</h1>
+      <h1>Coolest Animal Shelter Duh</h1>
+      <div class="navbar">
+        <p><a href="index.html">Home</a><a href="index.html"> More-Iguanas</a><a href="index.html"> Donate</a><a href="index.html"> Contact</a></p>
+      </div>
         <div class="profile">
           <h2>Baby Rhino!</h2>
           <img src="img/rhino.jpg">
